--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=VT323&display=swap');
 * {font-family: 'VT323', monospace;}
+
 body {
     margin: 0px;
     padding: 0px;
+    background-color:  #4831D4;
+}
+h1 {
+    color: #CCF381;
 }
