--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,12 @@
 .headerImage {
     width: 100%
 }
+
+.menuContainer {
+    width: 60%;
+    margin-left: 20%;
+    /* background-color: blue; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
