--- a/my-app/src/components/RecipePage.css
+++ b/my-app/src/components/RecipePage.css
@@ -41,6 +41,7 @@
 .ingred {
     color: white;
     margin: 0px;
+    font-size: 20px;
     /* position: absolute;
     left: 0px; */
 }
@@ -78,4 +79,9 @@ color: #CCF381;
     color: white;
     width: 80%;
     text-align: center;
+}
+
+.white {
+    font-size: 25px;
+    color: white;
 }
